--- a/exampleSite/config.yaml
+++ b/exampleSite/config.yaml
@@ -139,33 +139,28 @@ params:
       newPage: false
     socialLinks:
       fontAwesomeIcons:
-        - icon: fab fa-github
-          url: https://example.com
-        - icon: fab fa-x-twitter
-          url: https://example.com
-      customIcons:
-        - icon: /fav.png
-          url: "https://example.com"
+        - icon: fab fa-youtube
+          url: https://youtu.be/wo4P_YL4z9M
+        - icon: fab fa-linkedin
+          url: https://www.linkedin.com/in/andymathewsmartin/
 
   # About
   about:
     enable: true
     title: "About Me"
-    image: "/images/me.png"
+    image: "/images/my_stuff.png"
     content: |-
-      I am a software developer with a passion for web development. I have a background in computer science and mathematics, and I have a strong interest in the intersection of technology and art. I am currently working as a software developer at [example org.](https://example.com) in San Francisco, CA. 
-
-      I am currently working on a project that will be used to help people find the best way to get around the city.
+      I am a localization specialist with a focus on vendor and project management for Netflix-commissioned subtitles. I have a background in translation, teaching, and copywriting, and I have a profound interest in workflow streamlining and optimization. I am currently working as DTT Partner Lead at Transperfect Media.
     skills:
       enable: true
-      title: "Here are a few technologies I've been working with recently:"
+      title: "Here are a few of my skills:"
       items:
-        - "HTML"
-        - "CSS"
-        - "JavaScript"
-        - "React"
-        - "Node"
-        - "Express"
+        - "Linguistics (Translating, copywriting, editing)"
+        - "Subtitling (EZT, OOONA, Originator)"
+        - "Timed Text Specifications (Netflix, Custom)"
+        - "Productivity (Office, Google Suite)"
+        - "Video (Premiere, ScreenPal)"
+        - "Data Analytics (Tableau, PowerBI)"
 
   # Experience
   experience:
