--- a/exampleSite/config.yaml
+++ b/exampleSite/config.yaml
@@ -177,8 +177,12 @@ params:
           name: "View DTT Program"
           url: "http://gvm.netflixstudios.com/"
         content: |-
-          I am currently working as a team lead at [Sublime Subtitling / TransPerfect Media](https://www.transperfect.com/media) in Madrid, Spain. I am currently leading a team in charge of training and managing a pool of 200 + linguists who fulfill Netflix-commissioned timed text projects.
-
+          I am currently working as an account manager and team lead at [TransPerfect Media (formerly Sublime Subtitling)](https://www.transperfect.com/media) in Madrid, Spain. I am currently leading a team in charge of training and managing a pool of 200 + linguists who fulfill Netflix-commissioned timed text projects.
+          - Account Manager and Team lead: Drove strategy and client engagement for Netflix-commissioned subtitling projects, ensuring client satisfaction and enhancing project volume by [Y]% YoY.
+          - Recruitment: Developed scalable eLearning courses, cutting onboarding time in half and growing our linguist pool by 900%, expanding language coverage to 20+ languages.
+          - Operations: Innovated 6 project management and quality assurance protocols, enhancing team productivity and readiness for scaling up as needed.
+          - KPI analysis: Lead strategy to consistently meet Netflix's KPI targets in on-time delivery and two key types of quarterly quality control assessments.
+          
       - job: "Software Developer"
         company: "Amazon"
         companyUrl: "https://example.com"
