--- a/exampleSite/config.yaml
+++ b/exampleSite/config.yaml
@@ -168,7 +168,7 @@ params:
     enable: true
     # title: "Custom Name"
     items:
-      - job: "Vendor Lead Netflix DTT Partner Program"
+      - job: "Account Manager and Team Lead Netflix DTT Partner Program"
         company: "TransPerfect Media"
         companyUrl: "https://www.transperfect.com/media"
         date: "Jan 2019 - present"
@@ -179,11 +179,8 @@ params:
         content: |-
           I am currently working as an account manager and team lead at [TransPerfect Media (formerly Sublime Subtitling)](https://www.transperfect.com/media) in Madrid, Spain. I am currently leading a team in charge of training and managing a pool of 200 + linguists who fulfill Netflix-commissioned timed text projects.
           - Account Manager and Team lead: Drove strategy and client engagement for Netflix Direct Timed Text projects, ensuring client satisfaction and enhancing project volume and revenue by 77.26% average YoY.
-          
           - Recruitment: Developed scalable eLearning courses, cutting onboarding time in half and growing our linguist pool by 900%, expanding language coverage to 20+ languages.
-          
           - Operations: Innovated 6 project management and quality assurance protocols, enhancing team productivity and readiness for scaling up as needed, and slashing department costs by at least 40%.
-          
           - KPI analysis: Lead strategy to consistently meet Netflix's KPI milestones in On-time Delivery rate, Objective Errors Per Subtitle Event, and Subtitle Redelivery Request rate.
           
       - job: "Localization Project Manager"
@@ -204,39 +201,61 @@ params:
           - Helped develop scalable solutions for vetting and ranking over 300 linguists in various languages.
           - Helped Sublime meet ISO standards to remain competitive and drive new business.
 
-      - job: "Junior Software Developer"
-        company: "Apple"
-        companyUrl: "https://example.com"
-        date: "Jan 2020 - Aug 2020"
+      - job: "AV Subtitler/Translator/QCer"
+        company: "Freelance"
+        companyUrl: ""
+        date: "Jul 2017 - May 2018"
         info:
           enable: false
         featuredLink:
-          enable: true
+          enable: false
           url: "https://example.com"
         content: |
-          I am currently working as a software developer at [example org.](https://example.com) in San Francisco, CA. I am currently working on a project that will be used to help people find the best way to get around the city.
+          Worked on over 5000 minutes of high-profile subtitling projects, meeting quality and delivery standards for several clients/LSPs.
+          Flexible in undertaking complex requests with sudden changes in scope and workflow.
 
-          - Lead backend developer for a product.
-          - Created a frontend design for a product.
+          - Language Pairs: EN>ES, ES>EN (Castillian and Latam ES)
+          - Roles: Language Template Authoring and QC, Subtitle Authoring and QC, SDH/CC Authoring and QC
+          - Software: EZTitles, OOONA
+          - Specs: Netflix, Amazon, RedBull, Custom
 
-      - job: "UI/UX Designer"
-        company: "Netflix"
-        companyUrl: "https://example.com"
-        date: "June 2017 - Nov 2019"
+      - job: "ESL Teacher"
+        company: "Escuelas Católicas Madrid"
+        companyUrl: "https://www.ecmadrid.org/es/programas/programa-beda"
+        date: "December 2015 - Jul 2017"
         featuredLink:
           enable: true
-          url: "https://example.com"
+          url: "https://www.colegiosanagustin-madrid.org/"
         content: |
-          I am currently working as a software developer at [example org.](https://example.com) in San Francisco, CA. I am currently working on a project that will be used to help people find the best way to get around the city.
+          Planned and delivered full lessons for 18 classes at a top-ranked school in Madrid. Integrated technology, music, and drama to keep it engaging and fun Integrated technology, music, and drama to keep lessons engaging and fun, resulting in a general improvement in students' grades and attitudes toward learning a second language.
 
-          - Lead backend developer for a product.
-          - Created a frontend design for a product.
+      - job: "Floor Supervisor/Marketing Assistant"
+        company: "Project 219 Cafe"
+        companyUrl: "https://www.facebook.com/importersofhardware/?locale=es_LA"
+        date: "Sep 2013 - Mar 2014"
+        content: |
+          Multi-purpose manager at up-and-coming café in CBD.
+          - Floor Supervisor and Cook
+          - Managed floor during service and organized events.
+          - In charge of daily operations of the restaurant (opening/closing, balancing, stock, etc.)
+          - Came up with recipes, cooked, and did prep.
+          Marketing
+          - In charge of the social media portfolio.
+          - Executed promotion strategy, and wrote copy and menus.
 
-      - job: "Product Designer"
-        company: "Google"
-        companyUrl: "https://example.com"
-        date: "Feb 2016 - Mar 2017"
-        content: "I am currently working as a software developer at [example org.](https://example.com) in San Francisco, CA. I am currently working on a project that will be used to help people find the best way to get around the city."
+        - job: "Floor Supervisor/Marketing Assistant"
+        company: "Project 219 Cafe"
+        companyUrl: "https://www.facebook.com/importersofhardware/?locale=es_LA"
+        date: "Sep 2013 - Mar 2014"
+        content: |
+          Multi-purpose manager at up-and-coming café in CBD.
+          - Floor Supervisor and Cook
+          - Managed floor during service and organized events.
+          - In charge of daily operations of the restaurant (opening/closing, balancing, stock, etc.)
+          - Came up with recipes, cooked, and did prep.
+          Marketing
+          - In charge of the social media portfolio.
+          - Executed promotion strategy, and wrote copy and menus.
 
   # Education
   education:
