--- a/exampleSite/config.yaml
+++ b/exampleSite/config.yaml
@@ -203,7 +203,7 @@ params:
 
       - job: "AV Subtitler/Translator/QCer"
         company: "Freelance"
-        companyUrl: "gaga.com"
+        companyUrl: ""
         date: "Jul 2017 - May 2018"
         info:
           enable: false
@@ -233,9 +233,9 @@ params:
         date: "Sep 2013 - Mar 2014"
         content: "As the dynamic manager of a rising café in Melbourne's CBD, I juggled roles from Floor Supervisor to Cook and Marketer. I efficiently managed service floors, organized events, and handled daily café operations. Learned culinary skills as I executed and then created recipes and prepared dishes. On the marketing front, I led our social media efforts, developed promotions, and crafted menus. My initiative also brought to life a cocktail bar in the basement"
 
-      - job: "Freelance EN<>ES Translator"
-        company: "Project 219 Cafe"
-        companyUrl: "https://www.facebook.com/importersofhardware/?locale=es_LA"
+      - job: "EN<>ES Translator"
+        company: "Freelance"
+        companyUrl: ""
         date: "Jan 2018 - May 2018"
         content: "Under my father's tutelage, and having grown up bilingual in Spanish and English, I learned and perfected the translation trade. My work spanned translating diverse materials, from magazine features and columns to technical guides and legal papers, showcasing my versatility and linguistic proficiency."
 
