--- a/exampleSite/config.yaml
+++ b/exampleSite/config.yaml
@@ -202,7 +202,7 @@ params:
             - Helped Sublime meet ISO standards to remain competitive and drive new business.
 
       - job: "AV Subtitler/Translator/QCer"
-        company: "Freelance"
+        company: "Freelance Subtitler"
         companyUrl: ""
         date: "Jul 2017 - May 2018"
         info:
@@ -234,7 +234,7 @@ params:
         content: "As the dynamic manager of a rising café in Melbourne's CBD, I juggled roles from Floor Supervisor to Cook and Marketer. I efficiently managed service floors, organized events, and handled daily café operations. Learned culinary skills as I executed and then created recipes and prepared dishes. On the marketing front, I led our social media efforts, developed promotions, and crafted menus. My initiative also brought to life a cocktail bar in the basement"
 
       - job: "EN<>ES Translator"
-        company: "Freelance"
+        company: "Freelance Text Translator"
         companyUrl: ""
         date: "Jan 2018 - May 2018"
         content: "Under my father's tutelage, and having grown up bilingual in Spanish and English, I learned and perfected the translation trade. My work spanned translating diverse materials, from magazine features and columns to technical guides and legal papers, showcasing my versatility and linguistic proficiency."
