--- a/exampleSite/config.yaml
+++ b/exampleSite/config.yaml
@@ -247,55 +247,30 @@ params:
     items:
       - title: "Bachelor's in Political Sciences and Public Administration"
         school:
-          name: "Universidad de Salamanca"
+          name: "Universidad de Salamanca, Spain"
           url: "https://www.usal.es/universidad-de-salamanca"
           
-      - title: "An autodidact and an observer, everything else I learned from others or taught myself"
-
-  # Achievements
-  achievements:
-    enable: true
-    # title: "Custom Name"
-    items:
-      - title: Google kickstart runner
-        content: I solved all problems with optimal solution.
-        url: https://example.com
-        image: /images/achievment.jpg
-      - title: Facebook Hackathon Winner
-        content: Developed a product using Artificial Intelligence.
-        image: /images/achievment.jpg
-      - title: Hugo Profile
-        content: Developed a theme and getting 1K+ downloads per month.
-        url: "https://github.com/gurusabarish/hugo-profile"
-        image: /images/achievment.jpg
-      - title: Microsoft Imagine Runner
-        content: We are developed a product which can help others.
-      - title: Google Summer of Code
-        content: Contributed to a open source project.
-        url: https://example.com
+      - title: "An observer and autodidact. Everything else I learned from others or taught myself"
 
   # projects
   projects:
     enable: true
     # title: "Custom Name"
     items:
-      - title: Hugo Profile
-        content: A highly customizable and mobile first Hugo template for personal portfolio and blog.
-        image: /images/projects/profile.png
+      - title: My Professional Profile
+        content: As a learning experience, I built my personal portfolio and blog on GitHub.
+        image: /images/projects/profile 2.png
         featured:
           name: Demo
-          link: https://hugo-profile.netlify.app
+          link: https://http://amathews.com/
         badges:
-          - "Hugo"
-          - "Bootstrap"
+          - "GitHub"
           - "Javascript"
-        links:
+          - "Html"
+          - "Bootstrap"
+         links:
           - icon: fa fa-envelope
-            url: mailto:?subject=Hugo%20Profile%20Template&body=Check%20it%20out:%20https%3a%2f%2fhugo-profile.netlify.app%2fblog%2fmarkdown-syntax%2f
-          - icon: fab fa-github
-            url: https://github.com/gurusabarish/hugo-profile
-          - icon: fab fa-twitter
-            url: https://twitter.com/intent/tweet?text=Check+it+out:&url=https%3A%2F%2Fgithub.com%2Fgurusabarish%2Fhugo-profile
+            url: mailto:?subject=Andy's%20Profile&body=Check%20it%20out:%20http%3A%2F%2Famathews.com
 
       - title: Image Converter
         content: A web app to convert image to pdf, png to jpg, png to jpg and png to webp without database using django.
