--- a/exampleSite/config.yaml
+++ b/exampleSite/config.yaml
@@ -272,18 +272,18 @@ params:
           - icon: fa fa-envelope
             url: mailto:?subject=Andy's%20Profile&body=Check%20it%20out:%20http%3A%2F%2Famathews.com
 
-      - title: Image Converter
-        content: A web app to convert image to pdf, png to jpg, png to jpg and png to webp without database using django.
-        image: /images/projects/converter.jpg
-        featured:
-          name: Demo
-          link: https://django-converter.herokuapp.com
+      - title: E-learning Course
+        content: Dive into the world of professional subtitling. Tailored for Netflix-commissioned subtitling projects, this course distills everything from the technical skillset required to the workflows into essential lessons to further transform your passion for language and media into professional expertise.
+        image: /images/projects/course.gif
         badges:
-          - "Django"
-          - "Bootstrap"
+          - "Google Slides"
+          - "Originator"
+          - "Premiere"
+          - "ScreenPal"
+          - "OOONA"
         links:
-          - icon: fab fa-github
-            url: https://github.com/gurusabarish/converter
+          - icon: fab fa-youtube
+            url: https://youtu.be/wo4P_YL4z9M
 
       - title: Hugo Profile V2
         content: A clean and simple Hugo template for personal portfolio and blog.
@@ -304,7 +304,7 @@ params:
     enable: true
     # title: "Custom Name"
     content: My inbox is always open. Whether you have a question or just want to say hi, I’ll try my best to get back to you!
-    email: gurusabarisha@gmail.com
+    email: amathewsmartin@gmail.com
     btnName: Mail me
     # formspree:
     #   enable: true # `contact.email` value will be ignored
