--- a/exampleSite/config.yaml
+++ b/exampleSite/config.yaml
@@ -303,7 +303,7 @@ params:
       path: "blogs"
       count: 3
       title: Recent Posts
-      enable: true
+      enable: false
       disableFeaturedImage: false
     socialNetworks:
       github: https://github.com
