--- a/exampleSite/config.yaml
+++ b/exampleSite/config.yaml
@@ -54,7 +54,7 @@ Menus:
 
 params:
   title: "AndyMathews"
-  description: Text about my cool site
+  description: A hub for me and my projects
   # staticPath: ""  # The path to serve the static files from
   favicon: "/brandlogo-dark.png"
 
