--- a/exampleSite/config.yaml
+++ b/exampleSite/config.yaml
@@ -134,7 +134,7 @@ params:
     button:
       enable: true
       name: "CV"
-      url: "exampleSite/static/Andy Mathews_CV_2024.pdf"
+      url: "https://amathews.com/exampleSite/static/Andy Mathews_CV_2024.pdf"
       download: true
       newPage: false
     socialLinks:
@@ -306,11 +306,9 @@ params:
       enable: false
       disableFeaturedImage: false
     socialNetworks:
-      github: https://github.com
-      linkedin: https://linkedin.com
-      twitter: https://twitter.com
-      instagram: https://instagram.com
-      facebook: https://facebook.com
+      github: https://github.com/AndyMatmar
+      linkedin: https://www.linkedin.com/in/andymathewsmartin/
+      X: https://X.com
 
   # List pages like blogs and posts
   listPages:
