--- a/exampleSite/config.yaml
+++ b/exampleSite/config.yaml
@@ -250,7 +250,7 @@ params:
           name: "Universidad de Salamanca, Spain"
           url: "https://www.usal.es/universidad-de-salamanca"
           
-      - title: "An observer and autodidact. Everything else I learned from others or taught myself"
+      - title: "An observer and autodidact. Everything else, I have learned from others or taught myself over time"
 
   # projects
   projects:
